--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "react": "17.0.2",
-    "react-native": "0.66.0"
+   "react": "17.0.2",
+    "react-native": "0.66.0",
+    "react-native-snap-carousel": "^3.9.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
